fixed loader issue - undefintd class nfmes YNML,CSS, and JS .is-visible

--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -30,6 +30,9 @@
   animation-delay: 0s;
 }
 
-.hidden {
+.loader {
   display: none;
+}
+.loader.is-visible {
+  display: block;
 }
